# brain-mcp

./: .dockerignore  .gitignore  Dockerfile  PERSONAL.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
console/: Dockerfile  middleware.ts  package-lock.json  package.json
console/app/: globals.css  layout.tsx  page.tsx
console/components/: markdown.tsx  shell.tsx
console/lib/: brain.ts
deploy-template/: .env.example  .gitignore  README.md  brain  brain.config.yaml  compose.bundled-traefik.yml  compose.console.yml  compose.external-traefik.yml  compose.local-console.yml  compose.local.yml  docker-compose.yml
deploy-template/docs/: ADD-REMOTE-AGENT.md  OPERATIONS.md  RECOVERY.md  SECURITY.md
deploy-template/scripts/: add-agent.sh  backup-vault.sh  bootstrap.sh  brain.py  generate-secrets.sh  healthcheck.sh  restore-vault.sh  revoke-agent.sh  rotate-token.sh  update.sh  verify.sh
deploy-template/skills/: company-brain.md
examples/: brain.config.example.yaml  docker-compose.example.yml
src/brain_mcp/: api.py  audit.py  auth.py  config.py  errors.py  locking.py  notes.py  paths.py  permissions.py  ratelimit.py  registry.py  search.py  server.py
tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_concurrency.py  test_config.py  test_mcp_integration.py  test_notes.py  test_paths.py  test_permissions.py  test_ratelimit.py  test_redaction.py  test_registry.py  test_search.py
vault-template/_System/: AI Agent Instructions.md  Access and Contribution Rules.md  Company 2nd Brain Home.md  Entity Index.md  Ingestion Protocol.md  (+1 more)
(+24 files in other folders)
