[project]
name = "brain-mcp"
version = "0.2.1"
description = "Company 2nd Brain MCP server — the sole controlled writer to an Obsidian-compatible Markdown vault"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Sentient Labs" }]
dependencies = [
    "fastmcp>=2.10,<3",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["integration: end-to-end tests over real streamable HTTP"]
